--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -4,11 +4,16 @@
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
 	<script type="text/javascript">                                         
 		function tweet() {
-			$('#tweets').append('<p>Tweet!</p>');
+			var send_data = {id: 1};
+			$.getJSON("/main/tweets", send_data, function(data) {
+				$("#tweets").append("<p>Tweet from " + data["user"] + ": " + 
+														data["tweet_text"] + "</p>");
+			});
 	  }
 	
 		$(document).ready(function() {
-		  setInterval("tweet()", 5 * 1000); // Every 5 seconds
+//		  setTimeout("tweet()", 1 * 1000); //Change back to setInterval
+			setInterval("tweet()", 3 * 1000); // Every 30 seconds
 		 });
 	</script>
 </head>
