moving static files

--- a/templates/main/yaytaxesland.html
+++ b/templates/main/yaytaxesland.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Taxes YAY!</title>
 	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-	<link href="/templates/main/css/styles.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="static/css/styles.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="css/form_styles.css" rel="stylesheet" type="text/css" media="screen" />
 
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
