--- a/templates/main/yaytaxesland.html
+++ b/templates/main/yaytaxesland.html
@@ -3,18 +3,18 @@
 <html>
 <head>
 	<title>Taxes YAY!</title>
+	<link href="{{ MEDIA_URL }}css/styles.css" rel="stylesheet" type="text/css" media="screen" />
+	<link href="http://127.0.0.1:8888/css/form_styles.css" rel="stylesheet" type="text/css" media="screen" />
 	<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-	<link href="static/css/styles.css" rel="stylesheet" type="text/css" media="screen" />
-	<link href="css/form_styles.css" rel="stylesheet" type="text/css" media="screen" />
-
+	
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="js/jquery.number_format.js"></script>
-	<script type="text/javascript" src="js/jquery.random.js"></script>
-	<script type="text/javascript" src="js/sliders.js"></script>
-	<script type="text/javascript" src="js/block.js"></script>
-	<script type="text/javascript" src="js/income.js"></script>
-	<script type="text/javascript" src="js/page.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1:8888/js/jquery.number_format.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1:8888/js/jquery.random.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1:8888/js/sliders.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1:8888/js/block.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1:8888/js/income.js"></script>
+	<script type="text/javascript" src="http://127.0.0.1:8888/js/page.js"></script>
 </head>
 <body>
 <div class="wrapper">
